--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
   </head>
   <body>
 
+        <!-- ------------ HERO SECTION ------------- -->
+    <section>
+      <div class="container--container">
+        <div class="container">
+          <div class="container--1">
+            <h1>The World's Leading Distance Learning Provider</h1>
+            <p>Flexible easy to access learning opportunities can bring a significant change in how individuals prefer to learn! The eCademy can offer you to enjoy the beauty of eLearning</p>
+            <div class="button"><button><i class="fa-regular fa-user"></i>Join For Free</button></div>
+          </div>
+          
+          <div class="container--2">
+            <img src="./image" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ------------ FOOTER ------------- -->
     <footer class="footer">
