--- a/index.html
+++ b/index.html
@@ -32,6 +32,63 @@
       </div>
     </section>
 
+        <!-- ------------ HERO SECTION ------------- -->
+    <section>
+      <div class="container--container">
+        <div class="container">
+          <div class="container--1">
+            <h1>The World's Leading Distance Learning Provider</h1>
+            <p>Flexible easy to access learning opportunities can bring a significant change in how individuals prefer to learn! The eCademy can offer you to enjoy the beauty of eLearning</p>
+            <div class="button"><button><i class="fa-regular fa-user"></i>Join For Free</button></div>
+          </div>
+          
+          <div class="container--2">
+            <img src="./image" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ------------ COURSE SECTION ------------- -->
+    <section class="course">
+      <div class="course--container">
+        <div class="course--container--1">
+          <h4>EDUCATION FOR EVERYONE</h4>
+          <h2>Affordable Online Courses and Learning Opportunities</h2>
+          <p>Finding your own space and utilize better learning options can result in faster than the traditional ways. Enjoy the beauty of eLearning!</p>
+        </div>
+        <div class="course--container--2">
+          <div class="skills">
+            <i class="fa-solid fa-brain"></i>
+            <h3>Learn the Latest Top skills </h3>
+            <p>Learning top skills can bring an extra-ordinary outcome in a career.</p>
+            <a href="#">Start Now!</a>
+          </div>
+
+          <div class="pace">
+            <i class="fa-solid fa-display"></i>
+            <h3>Learn in Your Own Pace</h3>
+            <p>Everyone prefers to enjoy learning at their own pace & that gives a great result.</p>
+            <a href="#">Start Now!</a>
+          </div>
+
+          <div class="expert">
+            <i class="fa-solid fa-shield-halved"></i>
+            <h3>Learn From Industry Experts</h3>
+            <p>Experienced teachers can assist in learning faster with their bebst approaches!</p>
+            <a href="#">Start Now!</a>
+          </div>
+
+          <div class="world">
+            <i class="fa-solid fa-globe"></i>
+            <h3>Enjoy Learning From Anywhere</h3>
+            <p>We are delighted to give you options to enjoy learning from anywhere in the world</p>
+            <a href="#">Start Now!</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ------------ FOOTER ------------- -->
     <footer class="footer">
       <div class="footer--container">
