--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <hr />
       <div class="footer--footer">
         <div class="foo--1">
-          &copy;2022 eCademy is Proudly Crafted by <span>EnvyTheme</span>
+          &copy;2022 eCademy is Proudly Crafted by <span>OVO Designs</span>
         </div>
 
         <div class="foo--2">Privacy | Terms & Condition</div>
